[gd_scene load_steps=6 format=2]

[ext_resource path="res://asset/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=1]
[ext_resource path="res://asset/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://asset/ui/ilustration/empty.png" type="Texture" id=3]
[ext_resource path="res://asset/game/battle_result/battle_result.gd" type="Script" id=4]
[ext_resource path="res://asset/ui/background/bg.png" type="Texture" id=5]

[node name="battle_result" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 0.588235 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
margin_top = 165.0
margin_right = 600.0
margin_bottom = 215.0
rect_min_size = Vector2( 0, 50 )

[node name="result_title" type="Label" parent="VBoxContainer"]
margin_top = 219.0
margin_right = 600.0
margin_bottom = 279.0
custom_fonts/font = ExtResource( 2 )
text = "Lose"
align = 1
valign = 1

[node name="sub_result_title" type="Label" parent="VBoxContainer"]
margin_top = 283.0
margin_right = 600.0
margin_bottom = 323.0
custom_fonts/font = ExtResource( 1 )
align = 1
valign = 1

[node name="ilustration_container" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 327.0
margin_right = 600.0
margin_bottom = 677.0
rect_min_size = Vector2( 0, 350 )
size_flags_horizontal = 3
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/ilustration_container"]
margin_right = 20.0
margin_bottom = 350.0
rect_min_size = Vector2( 20, 0 )

[node name="result_ilustration" type="TextureRect" parent="VBoxContainer/ilustration_container"]
margin_left = 49.0
margin_right = 549.0
margin_bottom = 350.0
rect_min_size = Vector2( 500, 350 )
size_flags_horizontal = 6
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ilustration_container"]
margin_left = 580.0
margin_right = 600.0
margin_bottom = 350.0
rect_min_size = Vector2( 20, 0 )

[node name="score_board" type="MarginContainer" parent="VBoxContainer"]
visible = false
margin_top = 366.0
margin_right = 600.0
margin_bottom = 970.0
size_flags_vertical = 3

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/score_board"]
modulate = Color( 0, 0, 0, 0.184314 )
margin_right = 600.0
margin_bottom = 604.0
mouse_filter = 0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/score_board"]
margin_right = 600.0
margin_bottom = 604.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/score_board/HBoxContainer"]
margin_right = 20.0
margin_bottom = 604.0
rect_min_size = Vector2( 20, 0 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/score_board/HBoxContainer"]
margin_left = 24.0
margin_right = 576.0
margin_bottom = 604.0
rect_min_size = Vector2( 500, 500 )
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/score_board/HBoxContainer/ScrollContainer"]
margin_right = 552.0
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/score_board/HBoxContainer"]
margin_left = 580.0
margin_right = 600.0
margin_bottom = 604.0
rect_min_size = Vector2( 20, 0 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 681.0
margin_right = 600.0
margin_bottom = 701.0
rect_min_size = Vector2( 0, 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 705.0
margin_right = 600.0
margin_bottom = 805.0
alignment = 1

[node name="show_score_button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 63.0
margin_right = 263.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 1 )
text = "  Score "
__meta__ = {
"_editor_description_": ""
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 267.0
margin_right = 287.0
margin_bottom = 100.0
rect_min_size = Vector2( 20, 0 )

[node name="to_home_button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 291.0
margin_right = 536.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
size_flags_horizontal = 5
custom_fonts/font = ExtResource( 1 )
text = "  Home Menu "
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 694.0
margin_right = 600.0
margin_bottom = 794.0
alignment = 1

[node name="yes_button" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 98.0
margin_right = 298.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
size_flags_horizontal = 5
custom_fonts/font = ExtResource( 1 )
text = " Yes "
__meta__ = {
"_editor_description_": ""
}

[node name="no_button" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 302.0
margin_right = 502.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
size_flags_horizontal = 5
custom_fonts/font = ExtResource( 1 )
text = " No "
__meta__ = {
"_editor_description_": ""
}

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 809.0
margin_right = 600.0
margin_bottom = 859.0
rect_min_size = Vector2( 0, 50 )
[connection signal="pressed" from="VBoxContainer/HBoxContainer/show_score_button" to="." method="_on_show_score_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/to_home_button" to="." method="_on_to_home_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/yes_button" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/no_button" to="." method="_on_no_button_pressed"]
